refactor: prevent hidden input to be pressed

--- a/packages/core/scss/components/_radiobuttons.scss
+++ b/packages/core/scss/components/_radiobuttons.scss
@@ -15,6 +15,7 @@
   [type='radio']:checked {
     position: absolute;
     display: none;
+    pointer-events: none;
   }
 
   [type='radio']:not(:checked) + label,
