--- a/packages/core/scss/components/_checkboxes.scss
+++ b/packages/core/scss/components/_checkboxes.scss
@@ -15,6 +15,7 @@
   [type='checkbox']:checked {
     position: absolute;
     opacity: 0;
+    pointer-events: none;
   }
 
   .ag-checkbox-input-wrapper {
