refactor: revert display none change

--- a/packages/core/scss/components/_radiobuttons.scss
+++ b/packages/core/scss/components/_radiobuttons.scss
@@ -14,7 +14,7 @@
   [type='radio']:not(:checked),
   [type='radio']:checked {
     position: absolute;
-    display: none;
+    opacity: 0;
     pointer-events: none;
   }
 
