fix(core/breadcrumb): adapt icon margin between text

--- a/packages/core/src/components/breadcrumb/breadcrumb.scss
+++ b/packages/core/src/components/breadcrumb/breadcrumb.scss
@@ -125,7 +125,7 @@
       font-weight: $font-weight-bold;
 
       ix-icon {
-        margin-inline-end: $tiny-space;
+        margin-inline-end: 0.3125rem;
       }
     }
 
