--- a/packages/core/scss/components/_radiobuttons.scss
+++ b/packages/core/scss/components/_radiobuttons.scss
@@ -8,13 +8,14 @@
  */
 
 @mixin radio-basic() {
-  $size: $large-space;
+  $size: 1.25rem;
 
   /* Base for label styling */
   [type='radio']:not(:checked),
   [type='radio']:checked {
     position: absolute;
     opacity: 0;
+    pointer-events: none;
   }
 
   [type='radio']:not(:checked) + label,
@@ -47,14 +48,14 @@
 
   [type='radio'] + label:focus-visible {
     &:before {
-      outline: 1px solid var(--focus--border-color);
+      outline: 0.0625rem solid var(--focus--border-color);
       outline-offset: var(--theme-radiobtn--focus--outline-offset);
     }
   }
 
   [type='radio']:focus-visible + label {
     &:before {
-      outline: 1px solid var(--focus--border-color);
+      outline: 0.0625rem solid var(--focus--border-color);
       outline-offset: var(--theme-radiobtn--focus--outline-offset);
     }
   }
@@ -94,15 +95,14 @@
 
     & + label:after {
       content: '';
-      width: 10px;
-      height: 10px;
+      width: 0.625rem;
+      height: 0.625rem;
       display: block;
       background-color: var(--theme-radiobtn-checked--color);
       border-radius: 100%;
-      transform: scale(1.5);
       position: absolute;
-      top: 7px;
-      left: 7px;
+      top: 0.3125rem;
+      left: 0.3125rem;
     }
 
     &:hover + label:before {
@@ -138,10 +138,10 @@
       content: '';
       position: relative;
       display: block;
-      width: 14px;
-      height: 1px;
-      border-bottom: 2px solid var(--theme-radiobtn-mixed--color);
-      transform: translateX(5px) translateY(-0.8rem);
+      width: 0.875rem;
+      height: 0.0625rem;
+      border-bottom: 0.125rem solid var(--theme-radiobtn-mixed--color);
+      transform: translateX(0.3125rem) translateY(-0.8rem);
     }
 
     & + label:before {
