fix(core/menu-avatar): show avatar icon

--- a/packages/core/src/components/menu-avatar/menu-avatar.scss
+++ b/packages/core/src/components/menu-avatar/menu-avatar.scss
@@ -38,7 +38,7 @@
     }
 
     #avatar-path-person {
-      fill: var(--theme-avatar--person);
+      fill: var(--theme-color-4);
     }
 
     .avatar-name {
