fix(documentation): fix buttons responsiveness

--- a/packages/documentation/src/pages/index.module.scss
+++ b/packages/documentation/src/pages/index.module.scss
@@ -102,6 +102,11 @@
     justify-content: center;
     padding: 211px 0;
     gap: 45px;
+
+    .lines {
+      display: flex;
+      gap: 45px;
+    }
   }
 
   @media (max-width: 1024px) {
@@ -109,8 +114,18 @@
       flex-direction: column;
       align-items: center;
     }
+
+    .lines {
+      flex-direction: column;
+    }
   }
 
+  @media (max-width: 1700px) {
+    &.call_to_actions {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
 
   @media (max-width: 428px) {
     &.devices {
@@ -234,7 +249,6 @@
         width: 348px !important;
       }
     }
-
   }
 
   &.developers {
@@ -866,8 +880,6 @@
     width: auto !important;
   }
 }
-
-
 
 .Card_Icon {
   color: var(--theme-color-primary) !important;
