--- a/packages/documentation/src/pages/index.module.scss
+++ b/packages/documentation/src/pages/index.module.scss
@@ -1,19 +1,19 @@
-@media (max-width: 768px) {
-  .intro {
-    height: 170vh !important;
-    min-height: 170vh;
-    width: 100% !important;
-    position: absolute;
-    top: -250px !important;
-  }
-}
+// @media (max-width: 768px) {
+//   .intro {
+//     height: 170vh !important;
+//     min-height: 170vh;
+//     width: 100% !important;
+//     position: absolute;
+//     top: -250px !important;
+//   }
+// }
 
-@media (max-width: 428px) {
-  .intro {
-    height: 1400px !important;
-    min-height: 100vh !important;
-  }
-}
+// @media (max-width: 428px) {
+//   .intro {
+//     height: 1400px !important;
+//     min-height: 100vh !important;
+//   }
+// }
 
 // @media (max-width: 1024px) {
 //   .intro {
@@ -24,13 +24,13 @@
 //   }
 // }
 
-.intro {
-  position: absolute;
-  z-index: -1;
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
-}
+// .intro {
+//   position: absolute;
+//   z-index: -1;
+//   object-fit: cover;
+//   height: 100%;
+//   width: 100%;
+// }
 
 @media (max-width: 428px) {
   .container {
@@ -67,6 +67,12 @@
     padding: 81px 97px 0 66px;
     height: calc(100vh - var(--ifm-navbar-height));
     overflow: hidden;
+    background-color: #000028;
+
+    .logo {
+      margin-bottom: 45px;
+      margin-left: 24px;
+    }
 
     @media (max-width: 768px) {
       .scroll_down {
@@ -84,6 +90,10 @@
       .headline {
         margin-left: 0 !important;
       }
+
+      .logo {
+        margin-left: 0 !important;
+      }
     }
 
     .scroll_down {
@@ -94,6 +104,28 @@
       bottom: 40px;
       text-decoration: none;
       animation-duration: 10s;
+    }
+  }
+
+  &.welcome {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 211px 0;
+    background-color: #00ffb9;
+    color: #000028;
+    font-size: 70px;
+
+    .title {
+      display: flex;
+      margin-bottom: 58px;
+      font-weight: bold;
+    }
+
+    .icons {
+      display: flex;
+      gap: 60px;
     }
   }
 
@@ -110,7 +142,6 @@
       align-items: center;
     }
   }
-
 
   @media (max-width: 428px) {
     &.devices {
@@ -234,7 +265,6 @@
         width: 348px !important;
       }
     }
-
   }
 
   &.developers {
@@ -722,6 +752,12 @@
     }
   }
 
+  @media (max-width: 376px) {
+    .text_dark {
+      width: 318px !important;
+    }
+  }
+
   .line {
     height: 100%;
     background-image: linear-gradient(to bottom, #00ffb9, #00cccc);
@@ -841,7 +877,7 @@
 
   .Card_Box {
     justify-content: left !important;
-    margin-top: 50%;
+    margin-top: 10%;
   }
 
   .Card_Line {
@@ -865,9 +901,11 @@
   .Card_Line {
     width: auto !important;
   }
+
+  .Card_Box {
+    margin-top: -20%;
+  }
 }
-
-
 
 .Card_Icon {
   color: var(--theme-color-primary) !important;
