feat: store tab selection

--- a/packages/documentation/src/components/Playground/playground.scss
+++ b/packages/documentation/src/components/Playground/playground.scss
@@ -29,4 +29,8 @@
     margin-inline-start: auto;
     margin-inline-end: 0px;
   }
+
+  div.theme-code-block {
+    margin-bottom: 0 !important;
+  }
 }
