docs(landing-page): adapt to latest zaplin design (#212)

--- a/packages/documentation/src/css/custom.css
+++ b/packages/documentation/src/css/custom.css
@@ -126,6 +126,11 @@ aside {
   height: var(--ifm-navbar-height);
 }
 
+.navbar-root-background {
+  background-color: #000028;
+}
+
+
 .dropdown__menu {
   box-shadow: var(--theme-box-shadow-lvl-1) !important;
 }
