fix: show dropdown

--- a/packages/documentation/src/css/custom.css
+++ b/packages/documentation/src/css/custom.css
@@ -43,6 +43,11 @@ body {
   --bs-alert-bg: var(--theme-color-alarm) !important;
 }
 
+.theme-admonition-note {
+  background-color: var(--theme-color-7) !important;
+  color: var(--theme-color-inv-std-text);
+}
+
 .theme-admonition-caution {
   background-color: var(--theme-color-warning) !important;
   color: var(--theme-color-inv-std-text);
@@ -129,7 +134,6 @@ aside {
 .navbar-root-background {
   background-color: #000028;
 }
-
 
 .dropdown__menu {
   box-shadow: var(--theme-box-shadow-lvl-1) !important;
