refactor: use margin-block-end and migrate to rem

--- a/packages/core/src/components/group/group-context-menu.scss
+++ b/packages/core/src/components/group/group-context-menu.scss
@@ -9,9 +9,9 @@
 :host {
   display: block;
   position: relative;
-  margin-top: 5px;
-  margin-right: 5px;
-  margin-left: auto;
+  margin-top: 0.3125rem;
+  margin-block-end: 0.3125rem;
+  margin-block-start: auto;
 
   ix-icon-button {
     &::after {
