--- a/packages/core/src/components/group/group-context-menu.scss
+++ b/packages/core/src/components/group/group-context-menu.scss
@@ -9,9 +9,9 @@
 :host {
   display: block;
   position: relative;
-  margin-top: 0.3125rem;
-  margin-block-end: 0.3125rem;
-  margin-block-start: auto;
+  margin-block-start: 0.3125rem;
+  margin-inline-end: 0.3125rem;
+  margin-inline-start: auto;
 
   ix-icon-button {
     &::after {
