--- a/packages/core/scss/components/_radiobuttons.scss
+++ b/packages/core/scss/components/_radiobuttons.scss
@@ -13,9 +13,13 @@
   /* Base for label styling */
   [type='radio']:not(:checked),
   [type='radio']:checked {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
     position: absolute;
-    opacity: 0;
-    pointer-events: none;
+    white-space: nowrap;
   }
 
   [type='radio']:not(:checked) + label,
