--- a/packages/core/scss/theme/classic-light/_variables.scss
+++ b/packages/core/scss/theme/classic-light/_variables.scss
@@ -38,7 +38,7 @@ $classic-light: (
     color-lightbox: rgba(255, 255, 255, 0.6),
     color-7: #879baa,
     color-backdrop: rgba(255, 255, 255, 0.85),
-    color-input-focus: #00d7a0,
+    color-input--focus: #00d7a0,
     app-header--color: rgba(255, 255, 255, 0.85),
     app-header--background: #555f69,
     app-header--border-color: rgba(0, 0, 0, 0),
@@ -826,5 +826,4 @@ $classic-light: (
     chart-1-40: rgba(0, 133, 120, 0.4),
     color-1: #fff,
     input-hint--color: rgba(0, 0, 0, 0.6),
-
 );
