--- a/packages/aggrid/scss/ix-aggrid.scss
+++ b/packages/aggrid/scss/ix-aggrid.scss
@@ -24,6 +24,16 @@
 
   --ag-checkbox-checked-color: var(--theme-color-input--focus);
 
+  .ag-checkbox-input {
+    clip: inherit !important;
+    clip-path: inherit !important;
+    height: inherit !important;
+    width: inherit !important;
+    overflow: inherit !important;
+    position: inherit !important;
+    white-space: inherit !important;
+  }
+
   .ag-root-wrapper {
     border: none;
   }
