--- a/packages/core/src/components/select/test/mode-multiple-overflow/index.html
+++ b/packages/core/src/components/select/test/mode-multiple-overflow/index.html
@@ -13,11 +13,17 @@ SPDX-License-Identifier: MIT
     />
     <title>Stencil Component Starter</title>
   </head>
-  <body padding="2rem">
+  <body padding="2rem" style="width: 256px">
     <ix-select selected-indices="2" mode="multiple">
       <ix-select-item label="Item 1" value="1"></ix-select-item>
       <ix-select-item label="Item 2" value="2"></ix-select-item>
       <ix-select-item label="Item 3" value="3"></ix-select-item>
+      <ix-select-item label="Item 4" value="4"></ix-select-item>
+      <ix-select-item label="Item 5" value="5"></ix-select-item>
+      <ix-select-item label="Item 6" value="6"></ix-select-item>
+      <ix-select-item label="Item 7" value="7"></ix-select-item>
+      <ix-select-item label="Item 8" value="8"></ix-select-item>
+      <ix-select-item label="Item 9" value="9"></ix-select-item>
     </ix-select>
 
     <script>
@@ -26,7 +32,7 @@ SPDX-License-Identifier: MIT
         await window.customElements.whenDefined('ix-select-item');
 
         const select = document.querySelector('ix-select');
-        select.selectedIndices = ['1', '3'];
+        select.selectedIndices = ['1', '2', '3', '4', '5', '6'];
       })();
     </script>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
