--- a/packages/core/src/components/dropdown-button/test/dropdown-button-icon/index.html
+++ b/packages/core/src/components/dropdown-button/test/dropdown-button-icon/index.html
@@ -20,28 +20,52 @@ SPDX-License-Identifier: MIT
   </head>
   <body>
     <ix-dropdown-button
-    label=""
-    variant="Primary"
-    icon="checkboxes"
-  ></ix-dropdown-button>
-  <ix-dropdown-button
-    label=""
-    variant="Primary"
-    outline
-    icon="checkboxes"
-  ></ix-dropdown-button>
-  <ix-dropdown-button
-    label=""
-    variant="Primary"
-    ghost
-    icon="checkboxes"
-  ></ix-dropdown-button>
-  <ix-dropdown-button
-    label=""
-    variant="Primary"
-    disabled
-    icon="checkboxes"
-  ></ix-dropdown-button>
+      label=""
+      variant="Primary"
+      icon="checkboxes"
+    ></ix-dropdown-button>
+    <ix-dropdown-button
+      label=""
+      variant="Primary"
+      outline
+      icon="checkboxes"
+    ></ix-dropdown-button>
+    <ix-dropdown-button
+      label=""
+      variant="Primary"
+      ghost
+      icon="checkboxes"
+    ></ix-dropdown-button>
+    <ix-dropdown-button
+      label=""
+      variant="Primary"
+      disabled
+      icon="checkboxes"
+    ></ix-dropdown-button>
+
+    <ix-dropdown-button
+      label=""
+      variant="Secondary"
+      icon="checkboxes"
+    ></ix-dropdown-button>
+    <ix-dropdown-button
+      label=""
+      variant="Secondary"
+      outline
+      icon="checkboxes"
+    ></ix-dropdown-button>
+    <ix-dropdown-button
+      label=""
+      variant="Secondary"
+      ghost
+      icon="checkboxes"
+    ></ix-dropdown-button>
+    <ix-dropdown-button
+      label=""
+      variant="Secondary"
+      disabled
+      icon="checkboxes"
+    ></ix-dropdown-button>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
