--- a/packages/core/src/components/pill/pill.scss
+++ b/packages/core/src/components/pill/pill.scss
@@ -15,7 +15,7 @@ $border-radius: 100px;
 $chip-height: 1.25rem;
 
 :host {
-  display: flex;
+  display: inline-flex;
   width: fit-content;
   position: relative;
   align-items: center;
@@ -45,6 +45,8 @@ $chip-height: 1.25rem;
   }
 
   .hidden {
-    display: none !important;
+    // display: none !important;
+    width: 0 !important;
+    margin-right: 0 !important;
   }
 }
