fix(core): map navigation z index

--- a/packages/core/src/components/map-navigation-overlay/map-navigation-overlay.scss
+++ b/packages/core/src/components/map-navigation-overlay/map-navigation-overlay.scss
@@ -59,5 +59,10 @@
   .overlay-close {
     margin-left: auto;
     margin-right: $default-space;
+    cursor: pointer;
+  }
+
+  .overlay-close:hover {
+    background-color: red;
   }
 }
