--- a/packages/core/src/components/map-navigation/map-navigation.scss
+++ b/packages/core/src/components/map-navigation/map-navigation.scss
@@ -114,6 +114,6 @@
     position: relative;
     height: 100%;
     overflow: hidden;
-    z-index: calc(var(--theme-z-index-sticky) - 1);
+    z-index: 0;
   }
 }
