refactor: remove important

--- a/packages/core/src/components/pill/pill.scss
+++ b/packages/core/src/components/pill/pill.scss
@@ -45,7 +45,7 @@ $chip-height: 1.25rem;
   }
 
   .hidden {
-    width: 0 !important;
-    margin-right: 0 !important;
+    width: 0px;
+    margin-right: 0px;
   }
 }
