--- a/packages/core/src/components/chip/chip.scss
+++ b/packages/core/src/components/chip/chip.scss
@@ -31,8 +31,8 @@ $border-radius: 100px;
   }
 
   .hidden {
-    width: 0 !important;
-    margin-right: 0 !important;
+    width: 0px;
+    margin-right: 0px;
   }
 
   margin-left: $tiny-space;
