fix(core/category-filter, core/expanding-search): show correct clear button

--- a/packages/core/src/components/category-filter/category-filter.scss
+++ b/packages/core/src/components/category-filter/category-filter.scss
@@ -22,13 +22,14 @@
     box-shadow: 0 0 $tiny-space 0 var(--theme-color-primary) !important;
   }
 
-  .btn-close {
+  .reset-button {
     position: absolute;
     top: $tiny-space;
     right: $tiny-space;
-    min-width: $large-space;
-    width: $large-space;
-    height: $large-space;
+  }
+
+  .reset-button.hide-reset-button {
+    display: none;
   }
 
   .input-container {
