--- a/packages/core/src/components/expanding-search/expanding-search.scss
+++ b/packages/core/src/components/expanding-search/expanding-search.scss
@@ -101,6 +101,7 @@ $container-width: 11.5625rem;
     position: absolute;
     border-radius: var(--theme-input--border-radius);
     right: 0px;
+    margin-right: 0.25rem;
   }
 
   .input {
