--- a/packages/core/src/components/my-component/my-component.scss
+++ b/packages/core/src/components/my-component/my-component.scss
@@ -10,17 +10,14 @@
 @import 'common-variables';
 
 :host {
-  display: flex;
-  flex-direction: column;
+  display: block;
+  position: relative;
   width: 100vw;
   height: 100vh;
 
-  main {
-    width: 100%;
-    padding: 2rem;
-  }
-
-  ix-chip {
-    margin-block-end: $default-space;
+  .cont {
+    display: flex;
+    flex-direction: column;
+    width: 5rem;
   }
 }
