--- a/packages/core/src/components/tooltip/tooltip.scss
+++ b/packages/core/src/components/tooltip/tooltip.scss
@@ -9,14 +9,27 @@
   left: 0px;
   top: 0px;
 
+  max-width: 18.25rem;
+
   opacity: 0;
   visibility: collapse;
+  overflow-wrap: break-word;
 
+  border-radius: var(--tooltip-border-radius);
   background-color: var(--tooltip-background);
   padding: 0.375rem 0.75rem 0.375rem 0.875rem;
 
   filter: drop-shadow(0px 12px 18px rgba(0, 0, 0, 0.6))
     drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.6)) drop-shadow(0px 0px 2px #000000);
+
+  .tooltip-title {
+    display: flex;
+    align-items: center;
+
+    ix-icon {
+      margin-right: 0.35rem;
+    }
+  }
 }
 
 :host(.visible) {
