--- a/packages/core/src/components/tree/test/basic/index.html
+++ b/packages/core/src/components/tree/test/basic/index.html
@@ -16,7 +16,6 @@ SPDX-License-Identifier: MIT
   <body>
     <div style="height: 12rem; width: 100%">
       <ix-tree root="root" id="tree"></ix-tree>
-      <ix-button>Test</ix-button>
     </div>
 
     <script>
@@ -38,20 +37,14 @@ SPDX-License-Identifier: MIT
           root: {
             id: 'root',
             children: ['sample'],
-            hasChildren: false,
+            hasChildren: true,
             data: { name: '' },
           },
           sample: {
             id: 'sample',
-            children: ['sample-item-1'],
-            hasChildren: false,
-            data: { name: 'Sample' },
-          },
-          'sample-item-1': {
-            id: 'sample',
             children: [],
-            hasChildren: false,
-            data: { name: 'Sample item 1' },
+            hasChildren: true,
+            data: { name: 'Sample' },
           },
         };
 
