--- a/packages/core/src/components/category-filter/test/basic/index.html
+++ b/packages/core/src/components/category-filter/test/basic/index.html
@@ -13,8 +13,13 @@ SPDX-License-Identifier: MIT
     />
     <title>Stencil Component Starter</title>
     <style>
-      ix-button {
-        margin: 0 0.25rem;
+      body {
+        display: flex;
+        flex-direction: column;
+      }
+
+      form {
+        margin: 0;
       }
     </style>
   </head>
