feat(core): dropdown header & submenu

--- a/packages/core/src/components/dropdown/dropdown.scss
+++ b/packages/core/src/components/dropdown/dropdown.scss
@@ -21,32 +21,29 @@
   min-width: 0px;
 
 
-  .submenu {
-    display: block;
-    min-width: 10rem;
-    height: 40px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    color: var(--theme-color-std-text);
+  .line {
+    width: auto;
+    border: 0.031rem solid #9D9D96;
+    opacity: 0.5;
+    background-color: var(--theme-color-xweak-bdr);
+    margin-bottom: 0.25rem;
+  }
+
+  .quickActions {
+    height: 2.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-
-    &:hover {
-      background-color: var(--theme-color-ghost--hover);
-    }
-
-    &:active {
-     background-color: var(--theme-color-ghost--active);
-    }
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    margin-bottom: 0.25rem;
   }
 
+  .hide {
+    display: none;
+  }
 
-  .line {
-    width: 181px;
-    border: 0.5px solid #9D9D96;
-    color: red;
-    background-color: var(--theme-color-xweak-bdr);
+  slot[name=quick-actions]::slotted(*) {
+    display: flex;
   }
 }
