fix(core): event-list hover

--- a/packages/core/src/components/event-list-item/event-list-item.scss
+++ b/packages/core/src/components/event-list-item/event-list-item.scss
@@ -76,6 +76,9 @@ $height-single-line: 2.5rem;
       background-color: var(--theme-event-item--background--selected);
       border-color: var(--theme-event-item--border--selected);
     }
+    :hover {
+      border-color: var(--theme-event-item--border--selected) !important;
+    }
   }
 
   &[disabled],
