fix(core/menu): remove text decoration

--- a/packages/core/src/components/menu/menu.scss
+++ b/packages/core/src/components/menu/menu.scss
@@ -124,3 +124,8 @@ ix-menu {
     margin-top: auto;
   }
 }
+
+// Remove text-decoration if a tag is used inside ix-menu
+a[href]:has(> ix-menu-item) {
+  text-decoration: none;
+}
